# AICrypto

./: .gitignore  AGENTS.md  Cargo.toml  README.md
adapters/: README.md
adapters/exchanges/: README.md
adapters/exchanges/binance/: README.md
adapters/exchanges/binance/mappings/: README.md
adapters/exchanges/binance/market_data/: README.md
adapters/knowledge/: README.md
adapters/market_data/: README.md
adapters/news/: README.md
adapters/onchain/: README.md
adapters/social/: README.md
apps/: README.md
apps/admin-api/: README.md
apps/ops-tools/: README.md  aicrypto-ops.py
crates/api-gateway/: Cargo.toml
crates/api-gateway/src/: handlers.rs  main.rs
crates/backtest-engine/: Cargo.toml
crates/backtest-engine/src/: engine.rs  lib.rs  main.rs  metrics.rs  order.rs  position.rs  report.rs  strategy.rs
crates/feature-engine/: Cargo.toml
crates/feature-engine/src/: compute.rs  db.rs  feature_set.rs  indicators.rs  lib.rs  main.rs  ohlcv.rs
crates/foundation/: Cargo.toml
crates/foundation/src/: bus.rs  config.rs  lib.rs  observability.rs  storage.rs
crates/gateway-market/: Cargo.toml
crates/gateway-market/examples/: smoke_test.rs
crates/gateway-market/src/: lib.rs  main.rs
crates/gateway-market/src/binance/: mapper.rs  mod.rs  models.rs  rest.rs  user_stream.rs  ws.rs
crates/gateway-market/src/persistence/: backfill.rs  collector.rs  db.rs  mod.rs  sync.rs
crates/gateway-trading/: Cargo.toml
crates/gateway-trading/src/: executor.rs  lib.rs  main.rs  order_state_machine.rs
crates/pipeline-integration/: Cargo.toml
crates/pipeline-integration/src/: main.rs  pipeline.rs
crates/portfolio-engine/: Cargo.toml
crates/portfolio-engine/src/: lib.rs  main.rs  order_builder.rs  portfolio.rs  position_tracker.rs
crates/protocols/: Cargo.toml
crates/protocols/src/: canonical_event.rs  execution_report.rs  feature_vector.rs  lib.rs  market_snapshot.rs  order_intent.rs  review_report.rs  risk_decision.rs  signal_event.rs  skill_spec.rs  strategy_spec.rs
crates/risk-engine/: Cargo.toml
crates/risk-engine/src/: evaluator.rs  lib.rs  main.rs  rules.rs
crates/signal-runtime/: Cargo.toml
crates/signal-runtime/src/: lib.rs  main.rs  market_state.rs  signal_engine.rs  skill_registry.rs
crates/sim-trading/: Cargo.toml
crates/sim-trading/src/: engine.rs  lib.rs  main.rs  state.rs
decision/: README.md
decision/allocator/: README.md  optimizer.py
decision/planner/: README.md
decision/portfolio/: README.md
decision/risk_gateway/: README.md
decision/skill_router/: README.md
docs/: AICRYPTO_ECS_DEPLOY_PRODUCTION_README.md  AUDIT-REPORT-V2.md  AUDIT-REPORT-V3.md  AUDIT-REPORT.md  gsd-evaluation-report.md  service-hang-prevention-guide.md
docs/AICrypto-source/docs/: 01_项目总纲.md  02_币安永续合约API接入设计.md  03_系统架构设计.md  04_PRD_产品需求文档.md  05_策略与Skill体系设计.md  06_Phase开发规划.md  07_开发工作任务书.md  08_开源项目引入设计规划书.md  09_平台长期建设蓝图.md  10_开源仓库本地归档清单.md  11_开源仓库评级与引入优先级.md  12_开源项目持续跟踪机制.md  13_二阶段开源生态集成总规划.md  14_第二批开源仓库观察池.md  15_模块嫁接架构图与目录规划.md  16_首批模块实施任务分解.md  17_协议冻结清单.md  18_工程初始化方案.md  19_首批目录脚手架清单.md  20_首批模块接口草案.md  README.md
docs/troubleshooting/: demo-binary-hang-solution.md
execution/: README.md
execution/emergency/: README.md
execution/gateway/: README.md
execution/order_state/: README.md  state_machine.md
execution/positions/: README.md
execution/reconciliation/: README.md
foundation/: README.md
foundation/bus/: README.md
foundation/config/: README.md
foundation/observability/: README.md
foundation/security/: README.md
foundation/storage/: README.md
infra/: README.md
infra/deployment/: README.md
infra/docker/: Dockerfile.service  README.md  docker-compose.yml
infra/local/: .env.example  README.md
infra/local/env/: README.md
intelligence/: README.md
intelligence/agents/: README.md  evaluator.py  framework.py
intelligence/agents/debate_graph/: README.md
intelligence/agents/research_graph/: README.md
intelligence/agents/review_graph/: README.md
intelligence/backtest/: README.md
intelligence/correlations/: README.md  engine.py
intelligence/features/: README.md
intelligence/graph/: README.md  kg.py
intelligence/knowledge/: README.md
intelligence/knowledge/research_rag/: README.md
intelligence/knowledge/review_archive/: README.md
intelligence/knowledge/skill_memory/: README.md
intelligence/states/: README.md
protocols/: README.md
protocols/canonical_event/: schema.md
protocols/canonical_event/examples/: market_event.json
protocols/execution_report/: schema.md
protocols/feature_vector/: schema.md
protocols/feature_vector/examples/: features.json
protocols/market_snapshot/: schema.md
protocols/market_snapshot/examples/: snapshot.json
protocols/order_intent/: schema.md
protocols/order_intent/examples/: order_intent.json
protocols/review_report/: schema.md
protocols/risk_decision/: schema.md
protocols/signal_event/: schema.md
protocols/skill_spec/: schema.md
protocols/skill_spec/examples/: trend_skill.yaml
protocols/strategy_spec/: schema.md
research/: README.md  __init__.py  protocols.py  pyproject.toml
research/datasets/: README.md
research/experiments/: README.md
research/labeling/: __init__.py  swing_labeler.py
research/notebooks/: README.md
research/reports/: README.md
scripts/: README.md  run-demo.sh
scripts/bootstrap/: 001_init_schema.sql  README.md
scripts/data/: README.md
scripts/ecs/: deploy.sh  ops.sh  setup-ssl.sh
scripts/maintenance/: README.md
skills/: README.md
skills/correlation/: README.md  meme_viral.yaml  sector_catchup.yaml
skills/risk/: README.md  extreme_vol_reduce.yaml  regime_mismatch_cleanup.yaml  sector_exposure_reduce.yaml
skills/short/: README.md  alt_breakdown.yaml  btc_breakdown.yaml  high_funding_weak.yaml
skills/trend/: README.md  acceleration_exit.yaml  alt_breakout_long.yaml  btc_breakout_long.yaml  pullback_confirm_long.yaml
tests/: README.md
tests/adapters/: README.md
tests/protocols/: README.md
tests/replay/: README.md
tests/risk/: README.md
(+2 files in other folders)
