[workspace]
resolver = "2"
members = [
    "crates/protocols",
    "crates/foundation",
    "crates/gateway-market",
    "crates/gateway-trading",
    "crates/risk-engine",
    "crates/signal-runtime",
    "crates/portfolio-engine",
    "crates/feature-engine",
    "crates/backtest-engine",
    "crates/pipeline-integration",
    "crates/api-gateway",
    "crates/sim-trading",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "UNLICENSED"
repository = "https://github.com/aicrypto/aicrypto"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "2"
anyhow = "1"
async-nats = "0.38"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid", "json"] }
redis = { version = "0.27", features = ["tokio-comp"] }
reqwest = { version = "0.12", features = ["json"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
rand = "0.9"
async-trait = "0.1"
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
