[project]
name = "aicrypto-research"
version = "0.1.0"
description = "AICrypto Research Workspace"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "polars>=1.0",
    "pyarrow>=17.0",
    "numpy>=1.26",
    "scipy>=1.14",
    "scikit-learn>=1.5",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "plotly>=5.22",
    "jupyter>=1.0",
    "jupyterlab>=4.2",
    "notebook>=7.2",
    "python-binance>=1.0",
    "ccxt>=4.0",
    "httpx>=0.27",
    "websockets>=12.0",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "redis>=5.0",
    "nats-py>=2.7",
    "pydantic>=2.8",
    "pyyaml>=6.0",
    "tqdm>=4.66",
    "loguru>=0.7",
]

[project.optional-dependencies]
ml = [
    "torch>=2.3",
    "transformers>=4.42",
    "langchain>=0.2",
    "langgraph>=0.2",
    "openai>=1.35",
    "networkx>=3.3",
]
dev = [
    "pytest>=8.2",
    "ruff>=0.5",
    "mypy>=1.10",
    "ipython>=8.26",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
