[package]
name = "aicrypto-backtest-engine"
version.workspace = true
edition.workspace = true

[lib]
name = "aicrypto_backtest_engine"
path = "src/lib.rs"

[[bin]]
name = "backtest-engine"
path = "src/main.rs"

[dependencies]
aicrypto-protocols = { path = "../protocols" }
aicrypto-foundation = { path = "../foundation" }
aicrypto-feature-engine = { path = "../feature-engine" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
