[package]
name = "aicrypto-foundation"
version.workspace = true
edition.workspace = true

[dependencies]
aicrypto-protocols = { path = "../protocols" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-nats = { workspace = true }
sqlx = { workspace = true }
redis = { workspace = true }
