[package]
name = "aicrypto-gateway-market"
version.workspace = true
edition.workspace = true

[features]
default = ["server"]
server = []

[[bin]]
name = "gateway-market"
path = "src/main.rs"

[dependencies]
aicrypto-protocols = { path = "../protocols" }
aicrypto-foundation = { path = "../foundation" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["v4", "serde"] }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
sqlx = { workspace = true }
