[package]
name = "aicrypto-risk-engine"
version.workspace = true
edition.workspace = true

[lib]
name = "aicrypto_risk_engine"
path = "src/lib.rs"

[[bin]]
name = "risk-engine"
path = "src/main.rs"

[features]
default = ["server"]
server = []

[dependencies]
aicrypto-protocols = { path = "../protocols" }
aicrypto-foundation = { path = "../foundation" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["v4"] }
